[gd_scene load_steps=24 format=3 uid="uid://c8rcao2v0pjd2"]

[ext_resource type="FontFile" uid="uid://oxuroxbxnss" path="res://Etc/Fonts/Minecraft Rus NEW.otf" id="1_8526b"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_crrct"]
[ext_resource type="Texture2D" uid="uid://cscdqjq28jnk0" path="res://Characters/AndreiKulek/Андрей Кулек-Sheet.png" id="2_ene4i"]
[ext_resource type="Texture2D" uid="uid://b3ov5iiqlsqky" path="res://Characters/AlexandrUtkin/Александр Уткин-Sheet.png" id="3_plhxp"]
[ext_resource type="AudioStream" uid="uid://cj315mv6ch3p5" path="res://Music/UspetDoPari.mp3" id="5_2hy26"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5mq0v"]
atlas = ExtResource("2_ene4i")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cq1i"]
atlas = ExtResource("2_ene4i")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucho0"]
atlas = ExtResource("2_ene4i")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a462l"]
atlas = ExtResource("2_ene4i")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cs5s"]
atlas = ExtResource("2_ene4i")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8gr1"]
atlas = ExtResource("2_ene4i")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yo07"]
atlas = ExtResource("2_ene4i")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrjcq"]
atlas = ExtResource("2_ene4i")
region = Rect2(32, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_l7y3b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mq0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cq1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mq0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucho0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a462l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucho0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cs5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8gr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cs5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yo07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrjcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yo07")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_iyet6"]
atlas = ExtResource("3_plhxp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_01ba6"]
atlas = ExtResource("3_plhxp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fljg"]
atlas = ExtResource("3_plhxp")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1r8x"]
atlas = ExtResource("3_plhxp")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c036f"]
atlas = ExtResource("3_plhxp")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w8rw"]
atlas = ExtResource("3_plhxp")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_48kcq"]
atlas = ExtResource("3_plhxp")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w2to"]
atlas = ExtResource("3_plhxp")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qkpk4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyet6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01ba6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyet6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fljg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1r8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fljg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c036f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w8rw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c036f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48kcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w2to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48kcq")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_crrct")

[node name="Camera" type="Camera2D" parent="."]

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = -260.0
offset_top = -254.0
offset_right = 262.0
offset_bottom = -161.0
theme_override_fonts/font = ExtResource("1_8526b")
theme_override_font_sizes/font_size = 50
text = "УСПЕТЬ ДО ПАРЫ!"

[node name="AndreiDance" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-128, 0)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_l7y3b")
frame_progress = 0.42481

[node name="AlexDance" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(128, 0)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_qkpk4")
frame_progress = 0.128851

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_2hy26")
volume_db = -2.05

[node name="Button" type="Button" parent="."]
texture_filter = 1
offset_left = -138.0
offset_top = 134.0
offset_right = 137.0
offset_bottom = 234.0
theme_override_fonts/font = ExtResource("1_8526b")
theme_override_font_sizes/font_size = 50
text = "НАЧАТЬ"

[node name="Label2" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.74902)
z_index = -5
texture_filter = 1
offset_left = -548.0
offset_top = 318.0
offset_right = 781.0
offset_bottom = 1827.0
theme_override_fonts/font = ExtResource("1_8526b")
theme_override_font_sizes/font_size = 15
text = "Успеть до пары! v1.2
Посвящается всем студентам, которые
добираются до пары через тернии
(лес, маршрутки, пробки, метро).

Авторы:

Андрей Кулёк (Андрей Дуткин)
Александр Уткин (Александр Варнакин)
----- -------- (Кто-то потерялся)

Отдельное спасибо им за эту игру
и гениальные идеи!

В данных титрах нет ничего важного.
Так и зачем ты и дальше ждёшь их
конца? Начни уже игру!

...

Ладно, поговорим о том, в чём суть
сюжета. Александр Уткин, Андрей
Кулёк и Даниил Навракин должны
сдать важный проект по предмету ДЦП.
Однако они просыпаются очень поздно:
На всю беготню у них не более 30
минут! Что же делать? Конечно же
БЕЖАТЬ!!!!!!!
"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
